--- a/hadicap/handicap.css
+++ b/hadicap/handicap.css
@@ -8,34 +8,43 @@
 .handicap{
     border: 1px solid #000;
     text-align: center;
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(2, 2fr);
+    gap: 2%;
+    box-sizing: border-box;
     padding: 10px;
+    width: 100%;
+    margin: 0 auto;
 }
-h4{
+#simplon{
     border: 1px solid #000;
-    margin-top: 20%;
+    margin: 2%;
     text-align: center;
 }
 .handicap .cap{
     border: 1px solid #000;
-    width: 50%;
+    background-image: url(../public/image/hand.PNG);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 2%;
+    padding: 200px;
 }
- .handicap.cap {
-    width: 50%;
-}
-.cap img{
-    width: 100%;
-}
+ 
+/* .cap {
+    background-image: url(../public/image/hand.PNG);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-left: 2%;
+   
+} */
 .handicap .sommaire{
     border: 1px solid #000;
-    /* margin-left: 15%; */
     padding: 0;
-    width: 50%;
+    width: 100%;
 }
 .sommaire p{
-    border: 1px solid #000;
-    width: 40%;
+  margin-right: 5%;
+    /* width: 40%; */
 }
 .chiffre h3{
     text-align: center;
