--- a/numerique-inclusif/numeriqueInclusif.css
+++ b/numerique-inclusif/numeriqueInclusif.css
@@ -5,10 +5,10 @@
 }
 .banner::after {
     content: "";
-    height: 400px;
+    height: 500px;
     width: 100%;
     position: absolute;
-    background-color: rgb(0, 0, 0,0.7);
+    background-color: rgb(0, 0, 0,0.3);
     /* z-index: 50; */
 }
 .raccoursi{
@@ -17,6 +17,7 @@
     width: 40%;
     padding: 10px;
     z-index: 60;
+    left:250px ;
 }
 .raccoursi a{
 
@@ -26,7 +27,7 @@
 }
 
 .banner img {
-    height: 400px;
+    height: 500px;
 }
 
 .carousel-caption {
@@ -135,7 +136,7 @@
 .btns button {
     background:var(--rouge);
     width: 100%;
-    padding: 9px 0px;
+    padding: 8px 0px;
     outline: none;
     border: 2px solid var(--rouge);
     border-radius: 5px;
@@ -146,20 +147,23 @@
     transition: all 0.3s linear;
 }
 
+
  
  
 
-@media (max-width:1045px) {
-    .container  .box {
+@media (max-width:1200px) {
+    .container .box {
         width: calc(50% - 10px);
         margin-bottom: 20px;
     }
+        
 }
 
-@media (max-width:710px) {
-    .container  .box {
+@media (max-width:768px) {
+    .container .box {
         width: 100%;
     }
+    
 }
 /* end modalite */
 
