--- a/infrastructure-cuberscurite/infraCyber.css
+++ b/infrastructure-cuberscurite/infraCyber.css
@@ -26,7 +26,7 @@
     position: absolute;
     z-index: 1;
 }
-.cloud-banniere h1{
+.cloud-banniere h4{
     color: white;
     font-weight: bold;
     font-size: 80px;
@@ -56,10 +56,13 @@
     align-items: center;
     padding: 20px;
 }
-.cloud-text h2{
+.cloud-text h4{
     padding-top: 20px;
     /* border: 2px solid var(--rouge); */
 
+}
+#descend{
+    margin-top: 22%;
 }
 .cloud-text p{
    margin-top: -40px;
